# caching-service

./: .gitignore  AGENT.md  CHARTER.md  DOCKSIDE-EXAM.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: test.yml
cache_service/: __init__.py  cache.py
caching_service/: __init__.py  cache.py  entry.py  namespace.py  policy.py  stats.py
memory/: JOURNAL.md
tests/: __init__.py  test_cache.py
