[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caching-service"
version = "1.0.0"
description = "Intelligent in-memory cache with TTL, eviction policies, namespaces, and cache-aside patterns"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "SuperInstance"},
]
keywords = ["cache", "ttl", "lru", "lfu", "fifo", "eviction", "memoization", "cache-aside"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.urls]
Repository = "https://github.com/SuperInstance/caching-service"

[tool.setuptools.packages.find]
include = ["caching_service*"]

[tool.black]
line-length = 100
target-version = ['py310']
